fixed text align (html/css)

--- a/alex_project_1.css
+++ b/alex_project_1.css
@@ -77,6 +77,9 @@ header .profile-image:hover {
   transform: scale(1.2) rotate(5deg);
 }
 
+.closing_p{
+  text-align: left;
+}
 .tag {
   background-color: #efefef;
   color: black;
